package src.Programador;
import src.UsuarioAbstracao.UsuarioAbstrato;

public class ProgramadorModel extends UsuarioAbstrato{
    public ProgramadorModel(String nome){
        super(nome,"Programador");
    }

    //métodos para Programador
}